tests/snapshots/files__fail-typecheck__constructor_non_sort.snap
---
source: tests/files.rs
expression: err_msg
---
In 1:1-22 of constructor_non_sort.egg: (constructor f () i64)
The output type of constructor function f must be sort
